AJUSTES A PARTIR DE TESTES
